--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kelldev.Design</title>
-    <meta name="description" content="A portfolio of design and development from Kelleghan Design"/>
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="description" content="A portfolio of design and development from Kelldev.Design"/>
   </head>
   <body>
     <div id="root"></div>
