--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Kelldev.Design</title>
     <link rel="manifest" href="/manifest.json" />
     <meta name="description" content="A portfolio of design and development from Kelldev.Design"/>
+    <link rel="preconnect" href="https://api.kelldev.design">
+    <link rel="preconnect" href="https://ik.imagekit.io">
   </head>
   <body>
     <div id="root"></div>
